--- a/package.json
+++ b/package.json
@@ -22,10 +22,14 @@
   },
   "dependencies": {
     "angular": "^1.6.6",
+    "angular-animate": "^1.6.6",
+    "angular-aria": "^1.6.6",
+    "angular-material": "^1.1.5",
+    "angular-material-facade": "^0.0.4",
+    "angular-messages": "^1.6.6",
     "angular-ui-router": "^0.4.3",
     "electron-json-storage": "^3.2.0",
     "material-icons": "^0.1.0",
-    "materialize-css": "^0.100.2",
     "uuid": "^3.1.0"
   }
 }
